# ai-cmd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-all.txt  requirements.txt  schema.env
ai_cmd/: __main__.py  actions.py  ai.py  app.py  engine.py  exceptions.py  executors.py  main.py  mappers.py  pack.py  parsers.py  specs.py  tool_handler.py  tool_pack.py  types.py  utils.py
ai_cmd/ai/: base.py  exceptions.py  types.py
ai_cmd/ai/services/: mock.py  mock_reasoner.py
ai_cmd/ajents/assistant/: base.py  const.py  tools.py
ai_cmd/ajents/reasoner/: base.py  const.py  pack.py
ai_cmd/app/: base.py  const.py  exceptions.py  styles.py  types.py  window.py
ai_cmd/app/commands/: base.py  command_pack.py  (+2 more)
ai_cmd/clients/: mockai.py  openai.py
ai_cmd/commands/: ai_config.py  base.py  history.py
ai_cmd/controller/: base.py  types.py  utils.py
ai_cmd/core/: base.py  const.py  events.py
ai_cmd/settings/: base.py  const.py
ai_cmd/tool_packs/: app_pack.py  dirs_pack.py  display_pack.py  file_pack.py  files_pack.py  gui_pack.py  http_pack.py  ia_pack.py  os_pack.py  python_pack.py  time_pack.py  web_pack.py
ai_cmd/tools/: base.py  events.py  tool_pack.py  types.py
ai_cmd/window/: base.py
tests/: test_main.py  test_utils.py
tests/test_tools/: test_base.py  test_tool_handler.py  test_tool_pack.py
tests/tests_tools_schemas/: test_parsers.py  test_tool_schema_generator.py
tests/tools_packs/: test_dirs_pack.py  test_display_pack.py  test_files_pack.py  test_http_pack.py  test_os_pack.py  test_paths_pack.py  test_python_pack.py  test_web_pack.py
(+41 files in other folders)
