[project]
name = "ai-cmd"
version = "1.0.0"
description = "Un asistente en tu terminal"
authors = [
    {name = "Marlon",email = "121285806+xmarlon30x2@users.noreply.github.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.66.2,<2.0.0)",
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pexpect (>=4.9.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = "7.6.12"


[tool.poetry.group.optional]
optional = true

[tool.poetry.group.optional.dependencies]
pynput = "1.8.0"
googlesearch-python = "1.3.0"
requests = "2.32.3"
mss = "10.0.0"
pyautogui = "0.9.54"
beautifulsoup4 = "4.13.3"
chardet = "5.2.0"
pillow = "11.1.0"

